@@ -154,12 +154,12 @@ read.landsat <- function(file, band=8, debug=getOption("oceDebug"))
     rval
 }
 
-landsatTrim <- function(x, ll, ur)
+landsatTrim <- function(x, ll, ur, debug=getOption("oceDebug"))
 {
     if (!inherits(x, "landsat"))
         stop("method is only for landsat objects")
-    print(ll)
-    print(ur)
+    oceDebug(debug, "ll:", ll$logitude, "E, ", ll$latitude, "N\n", sep="")
+    oceDebug(debug, "ur:", ur$logitude, "E, ", ur$latitude, "N\n", sep="")
     if (2 != sum(c("longitude", "latitude") %in% names(ll)))
         stop("'ll' must have named items 'longitude' and 'latitude'")
     if (2 != sum(c("longitude", "latitude") %in% names(ur)))
@@ -174,18 +174,23 @@ landsatTrim <- function(x, ll, ur)
     user <- c(x@metadata$urlon, x@metadata$lllon)
     image <- c(1, dim[1])
     m <- lm(image ~ user)
+    if (debug)
+        print(m)
     ilim <- round(predict(m, list(user=c(ll$longitude, ur$longitude))))
     ilim[1] <- max(1, ilim[1])
     ilim[2] <- min(ilim[2], dim[1])
     user <- c(x@metadata$urlat, x@metadata$lllat)
     image <- c(1, dim[2])
     m <- lm(image ~ user)
-    print(m)
+    if (debug)
+        print(m)
     jlim <- round(predict(m, list(user=c(ll$latitude, ur$latitude))))
     jlim[1] <- max(1, jlim[1])
     jlim[2] <- min(jlim[2], dim[2])
     if (jlim[2] > jlim[1] && ilim[2] > ilim[1])
         stop("no intersection between landsat image and trimming box")
+    oceDebug(debug, "Trimming i to range", ilim[1], "to", ilim[2], "inclusive\n")
+    oceDebug(debug, "Trimming j to range", jlim[1], "to", jlim[2], "inclusive\n")
     x@data[[1]] <- x@data[[1]][seq.int(ilim[1], ilim[2]), seq.int(jlim[1], jlim[2])]
     ## Update bounding box but FIXME: this is not quite right, owing to projections
     x@metadata$lllon <- ll$longitude
