@@ -1,4 +1,5 @@
 0.9-14
+- landsat support added
 - drawPalette() has new arg 'pos'
 - plotProfile() and plotTS() get new argument 'pt.bg'
 - plot.section() grids the data if needed
